--- a/css/medium.css
+++ b/css/medium.css
@@ -1,8 +1,13 @@
+/* 768px */
 .flex_row_container {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+}
+
+header h1 {
+    font-size: 38px;
 }
 
 .all_contacts {
