--- a/css/medium.css
+++ b/css/medium.css
@@ -10,6 +10,13 @@ header h1 {
     font-size: 38px;
 }
 
+.cafe {
+    padding: 40px 20px;
+}
+.single_cafe {
+    width: 30%;
+}
+
 .all_contacts {
     width: 100%;
     padding: 20px;
