--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif !important;
 }
 
 html {
-    font-family: 'Montserrat', sans-serif;
     scroll-behavior: smooth;
 }
 
@@ -14,6 +14,10 @@ html {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 700;
 }
 
 /* header */
