--- a/css/xlarge.css
+++ b/css/xlarge.css
@@ -3,6 +3,12 @@ header h1 {
     font-size: 42px;
 }
 
+.animation img{
+    max-width: 1100px;
+    height: 600px;
+    margin: 0 auto;
+}
+
 .contact {
     max-width: 1100px;
     margin: 5px auto;
